--- a/public/ticket.html
+++ b/public/ticket.html
@@ -17,6 +17,7 @@ body {
 }
 
 h1 { margin-bottom: 5px; }
+
 #ticketId {
   font-size: 14px;
   margin-bottom: 15px;
@@ -26,36 +27,50 @@ h1 { margin-bottom: 5px; }
 #ticket {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  gap: 10px;
+  gap: 12px;
   margin-bottom: 20px;
 }
 
 .cell {
-  width: 60px;
-  height: 60px;
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
   background: #eee;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 20px;
+  font-size: 22px;
   font-weight: bold;
   cursor: pointer;
+  transition: all 0.2s ease;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+}
+
+.cell:hover {
+  transform: scale(1.1);
 }
 
 .cell.marked {
   background: #ff5252;
   color: white;
+  transform: scale(1.15);
 }
 
 button {
-  padding: 12px 24px;
-  font-size: 18px;
+  padding: 14px 28px;
+  font-size: 20px;
   border: none;
-  border-radius: 12px;
+  border-radius: 14px;
   background: #222;
   color: white;
   cursor: pointer;
+  margin-top: 10px;
+  transition: 0.2s;
+}
+
+button:hover {
+  transform: scale(1.08);
+  background: #000;
 }
 
 #result {
@@ -78,6 +93,7 @@ button {
 <div id="result"></div>
 
 <script>
+/* === GET TICKET ID === */
 const params = new URLSearchParams(location.search);
 const ticketId = params.get("ticketId");
 
@@ -90,6 +106,7 @@ document.getElementById("ticketId").innerText = "ID Κουπονιού: " + tick
 
 let ticketNumbers = [];
 
+/* === LOAD TICKET FROM SERVER === */
 async function loadTicket() {
   const res = await fetch("/api/ticket/" + ticketId);
   if (!res.ok) {
@@ -114,6 +131,7 @@ async function loadTicket() {
 
 loadTicket();
 
+/* === SEND BINGO REQUEST === */
 document.getElementById("bingoBtn").onclick = async () => {
   const marked = [...document.querySelectorAll(".cell.marked")]
     .map(el => parseInt(el.textContent));
@@ -127,9 +145,11 @@ document.getElementById("bingoBtn").onclick = async () => {
   const data = await res.json();
 
   if (data.winner) {
-    document.getElementById("result").innerText = "🏆 ΚΕΡΔΙΣΕΣ! Περιμένετε επιβεβαίωση από την οθόνη.";
+    document.getElementById("result").innerText =
+      "🏆 ΚΕΡΔΙΣΕΣ! Περιμένετε επιβεβαίωση από την οθόνη.";
   } else {
-    document.getElementById("result").innerText = "❌ Δεν είναι ακόμα BINGO";
+    document.getElementById("result").innerText =
+      "❌ Δεν είναι ακόμα BINGO";
   }
 };
 </script>
